--- a/modules/689/pages/doc-02.adoc
+++ b/modules/689/pages/doc-02.adoc
@@ -35,13 +35,13 @@ Reichsthaler. The Amt also noted that it had temporarily suspended the distraint
 
 [cols="1a,1a",options="noheader",frame=none,grid=none]
 |===
-|image::04-r-original.png[scale=50,link=self]
-|image::05-l.png[scale=50,link=self]
+|image::04-r-original.png[link=self]
+|image::05-l.png[link=self]
 |===
 
 [cols="1a,1a",options="noheader",frame=none,grid=none]
 |===
-|image::05-r.png[scale=50,link=self]
+|image::05-r.png[link=self]
 |
 |===
 
@@ -226,7 +226,7 @@ shows clerk Holste dispatched the decision on 17 November 1841.
 
 [cols="1a,1a",options="noheader",frame=none,grid=none]
 |===
-|image::06-l.png[scale=25,link=self]
+|image::06-l.png[link=self]
 |
 |===
 
@@ -300,7 +300,7 @@ resolution.
 
 [cols="1a,1a",options="noheader",frame=none,grid=none]
 |===
-|image::08-l.png[scale=25,link=self]
+|image::08-l.png[link=self]
 |
 |===
 
