--- a/modules/689/pages/doc-06.adoc
+++ b/modules/689/pages/doc-06.adoc
@@ -38,7 +38,7 @@ gegebnen Werthe.
 Bbg 16. Decbr 41
 
 
-[Roth?]
+[Ricke?]
 Verte
 ....
 |
@@ -58,7 +58,7 @@ for which it was sold to Krückeberg. But that is twice the value
 given by Head Forester Kreuzinger.
 
 
-[Roth?]
+[Ricke?]
 turn over
 ____
 |===
