--- a/modules/689/pages/doc-07.adoc
+++ b/modules/689/pages/doc-07.adoc
@@ -31,7 +31,7 @@ wahlung der 200 r. aus Amt,
 und solches Geld gehörig zu ver-                        
 wenden, verfügt werden soll.                            
 Suppl: ist hiervon in Kenntniß zu setzen.               
-Bburg 24. Dibr 1841.                     ...
+Bburg 24. Dibr 1841.
 Fürstl: p.
 
 
