--- a/modules/689/pages/doc-07.adoc
+++ b/modules/689/pages/doc-07.adoc
@@ -18,13 +18,13 @@ renbusch betr:
 Um den Colon Krückeberg Nr. 10                          
 in Berenbusch, wegen der an                             
 Hempel Söhne in Minden zu                               
-Zahlenden Schulden, zu helfen,                          
-haben Serenissimus Regens                               
-deieselben ein Darlehn von 200 r.                       
-zu 4% Zinsen und Halbjähriger                           
-Loose aus Kammerkasse zu be-                            
+zahlenden Schulden, zu helfen,                          
+haben Serenissimus Regens
+demselben ein Darlehn von 200 r.                       
+zu 4% Zinsen und halbjähriger                           
+Löse aus Kammerkasse zu be-                            
 willigen geruht. Das Amt wird                           
-daher beauftragt, die behufige                          
+daher beauftragt, die [behufige]
 Obligation, worin auch in specie                        
 wegen Sicherheit des Darlehns,                          
 das Nöthige aufzunehmen ist,                            
