--- a/modules/689/pages/doc-index.adoc
+++ b/modules/689/pages/doc-index.adoc
@@ -76,7 +76,7 @@ Gesuch um
 
 |5.
 |xref:doc-05.adoc#doc-index-5-1[Bericht des Of. Creuzinger Anb. Situations-Riß der Söhren-Weide]
-.4+|Verkauf seiner Ländereien auf der Söhren-Weide betr.
+.4+.^|Verkauf seiner Ländereien auf der Söhren-Weide betr.
 |Bbg.
 |1841
 |Decbr.
