--- a/modules/689/pages/doc-08.adoc
+++ b/modules/689/pages/doc-08.adoc
@@ -46,6 +46,31 @@ zu versehe[n]. Bbg. 20. Jan 42.
                       vert[retend]
 ....
 
+|
+[verse]
+____
+\*[Fiscal oval hand-stamp]* Princely Schaumburg-Lippe stamp duty — 3 groschen.
+
+*To the Princely Rent Chamber*
+Report from the Office of Bückeburg
+
+*Presentation No. 1662 — to Chamber No. 5702*
+
+*re: Loan for Colon Krückeberg, No. 10 in Berenbusch*
+
+In accordance with the most gracious rescript of 24/30 December
+of last year, we do not fail to submit, most humbly, the bond
+drawn up concerning the loan of Colon Krückeberg, No. 10 in
+Berenbusch.
+*Bückeburg, 12 January 1842*
+\[three signatures] *(district officer)*
+
+*R.C. (Rentkammer decision).* The obligation is to be confirmed,
+and K. R. Berger is to be furnished with a payment order, but
+*not* to Krückeberg—-*to the Amt. Bückeburg, 20 Jan. 1842. Ricke,
+acting on behalf of the Rentkammer.*
+____
+|====
 
 image::19-l.png[link=self]
 
