--- a/modules/689/pages/doc-08.adoc
+++ b/modules/689/pages/doc-08.adoc
@@ -48,7 +48,7 @@ zu versehe[n]. Bbg. 20. Jan 42.
 
 [verse]
 ____
-\*[Fiscal oval hand-stamp]* Princely Schaumburg-Lippe stamp duty — 3 groschen.
+*[Fiscal oval hand-stamp]* Princely Schaumburg-Lippe stamp duty — 3 groschen.
 
 *To the Princely Rent Chamber*
 Report from the Office of Bückeburg
@@ -62,7 +62,7 @@ of last year, we do not fail to submit, most humbly, the bond
 drawn up concerning the loan of Colon Krückeberg, No. 10 in
 Berenbusch.
 *Bückeburg, 12 January 1842*
-\[three signatures] *(district officer)*
+[three signatures] *(district officer)*
 
 *R.C. (Rentkammer decision).* The obligation is to be confirmed,
 and K. R. Berger is to be furnished with a payment order, but
