--- a/modules/689/pages/doc-08.adoc
+++ b/modules/689/pages/doc-08.adoc
@@ -53,7 +53,7 @@ ____
 *To the Princely Rent Chamber*
 Report from the Office of Bückeburg
 
-*Presentation No. 1662 — to Chamber No. 5702*
+*Amt register no. 1662 (series: Protocol/outgoing register) — re: Chamber file no. 5702*
 
 *re: Loan for Colon Krückeberg, No. 10 in Berenbusch*
 
