--- a/modules/689/pages/doc-08.adoc
+++ b/modules/689/pages/doc-08.adoc
@@ -34,7 +34,7 @@ mene Obligation unterthänig einzu-
 sanden.
 Bückeburg den 12 Januar 1842
 
-Haadra Wieder MNenhsel Jöcker 
+Haadra MNenhsel Jöcker 
 
 RC.
 Die Obligation wäre zu bestätigen
