--- a/modules/689/pages/doc-08.adoc
+++ b/modules/689/pages/doc-08.adoc
@@ -36,7 +36,7 @@ mene Obligation unterthänig einzu-
 sanden.
 Bückeburg den 12 Januar 1842
 
-Haadra MNenhsel Jöcker 
+Hauck MNenhsel Höcker 
 
 RC.
 Die Obligation wäre zu bestätigen
