--- a/modules/689/pages/doc-02.adoc
+++ b/modules/689/pages/doc-02.adoc
@@ -136,7 +136,7 @@ N. C. 438i             Gesuch des Colons Krückeberg N. 10
     Auspfandung einstweilen sistirt haben
     Bückeburg den 7t October 1841.
 
-    Hauck N Neuhsel, Höcker
+    Hauck Dr Neuhsel, Höcker
 
     R[ent]C[ammer]. rescrib: Das Amt habe
     wie angetragen den
@@ -205,7 +205,7 @@ that claim.
 Finally, we note that we have temporarily stayed execution of the
 distraint ordered against Krückeberg.  Bückeburg, 7 October 1841.
 
-Hauck – Neuhsel – Höcker
+Hauck Dr Neuhsel Höcker
 
 Rescript: The Amt shall, as requested, notify Krückeberg.
 B[ückeburg], 14 Oct. 1841.
