--- a/modules/689/pages/doc-08.adoc
+++ b/modules/689/pages/doc-08.adoc
@@ -36,7 +36,7 @@ mene Obligation unterthänig einzu-
 sanden.
 Bückeburg den 12 Januar 1842
 
-Hauck Dr. Nenhsel Höcker 
+Hauck D^r^ Neuhsel Höcker 
 
 RC.
 Die Obligation wäre zu bestätigen
@@ -65,7 +65,7 @@ of last year, we do not fail to submit, most humbly, the bond
 drawn up concerning the loan of Colon Krückeberg, No. 10 in
 Berenbusch.
 *Bückeburg, 12 January 1842*
-[three signatures] *(district officer)*
+ Hauck D^r^ Neuhsel Höcker *(district officer)*
 
 *R.C. (Rentkammer decision).* The obligation is to be confirmed,
 and K. R. Berger is to be furnished with a payment order, but
