--- a/modules/689/pages/doc-08.adoc
+++ b/modules/689/pages/doc-08.adoc
@@ -71,6 +71,9 @@ Berenbusch.
 and K. R. Berger is to be furnished with a payment order, but
 *not* to Krückeberg—-*to the Amt. Bückeburg, 20 Jan. 1842. Ricke,
 acting on behalf of the Rentkammer.*
+
+Confirm the loan bond, then issue a payment order to Councillor
+K. R. Berger—-not to Krückeberg, to the Amt.
 ____
 
 
