--- a/modules/689/pages/doc-08.adoc
+++ b/modules/689/pages/doc-08.adoc
@@ -67,13 +67,12 @@ Berenbusch.
 *Bückeburg, 12 January 1842*
  Hauck D^r^ Neuhsel Höcker *(district officer)*
 
-*R.C. (Rentkammer decision).* The obligation is to be confirmed,
-and K. R. Berger is to be furnished with a payment order, but
-*not* to Krückeberg—-*to the Amt. Bückeburg, 20 Jan. 1842. Ricke,
-acting on behalf of the Rentkammer.*
-
+*R.C. (Rentkammer decision).* 
 Confirm the loan bond, then issue a payment order to Councillor
 K. R. Berger—-not to Krückeberg, to the Amt.
+Bückeburg, 20 Jan. 1842.
+*Ricke, acting on behalf of the Rentkammer.*
+
 ____
 
 
