--- a/modules/689/pages/doc-07.adoc
+++ b/modules/689/pages/doc-07.adoc
@@ -55,22 +55,23 @@ Lm   L
 ____
 Office Draft to the Amt Bückeburg
 
-Loan for Colon Krückeberg, No. 10 in Berenbusch.
+Here’s a clear, layman-friendly translation (avoiding “Obligation”):
+
+*Re: Loan for Colon Krückeberg, No. 10 in Berenbusch*
 
 To assist Colon Krückeberg, No. 10 in Berenbusch, with the debts
 payable to Hempel & Sons in Minden, His Serene Highness, the
-Regent, has been pleased to approve for him a loan of 200 r., at
-4% interest and with semiannual amortization, to be granted from
-the chamber treasury. The office is therefore instructed to
-submit the behufliche obligation (i.e., the bond drawn up for
-this purpose), in which the necessary particulars regarding the
-security for the loan are to be set down in detail; thereafter
-the disbursement of the 200 r. by the office is to be ordered and
-such funds are to be properly applied. The petitioner is to be
-informed of this.
+Regent, has been pleased to approve for him a loan of *200
+Reichstaler* at *4% interest*, with *semiannual installments*, to
+be granted from the *chamber treasury*. The office is therefore
+instructed to submit the *loan agreement* (setting out in detail
+the *collateral* securing the loan); thereafter the *disbursement
+of the 200 Reichstaler by the office* is to be ordered, and the
+money is to be applied properly to its purpose. The *petitioner
+is to be informed* of this.
+*Bückeburg, 24 December 1841.*
+*By order of the Prince.*
 
-Bückeburg, 24 Dec. 1841.
-By order of the Prince.
 
 [initials: Lm L]
 ____
