--- a/modules/689/pages/doc-08.adoc
+++ b/modules/689/pages/doc-08.adoc
@@ -55,21 +55,16 @@ zu versehe[n]. Bbg. 20. Jan 42.
 
 [verse]
 ____
-*[Fiscal oval hand-stamp]* Princely Schaumburg-Lippe stamp duty — 3 groschen.
-
 *To the Princely Rent Chamber*
 Report from the Office of Bückeburg
 
 *Amt register no. 1662 (series: Protocol/outgoing register) — re: Chamber file no. 5702*
+*Re: Loan for Colon Krückeberg, No. 10 in Berenbusch*
 
-*re: Loan for Colon Krückeberg, No. 10 in Berenbusch*
-
-In accordance with the most gracious rescript of 24/30 December
-of last year, we do not fail to submit, most humbly, the bond
-drawn up concerning the loan of Colon Krückeberg, No. 10 in
-Berenbusch.
-*Bückeburg, 12 January 1842*
- Hauck D^r^ Neuhsel Höcker *(district officer)*
+*In accordance with the most gracious rescript of 24/30 December
+of last year, we hereby enclose the loan bond* drawn up for Colon
+Krückeberg, No. 10 in Berenbusch.  *Bückeburg, 12 January 1842*
+Hauck D^r^ Neuhsel Höcker *(district officer)*
 
 *R.C. (Rentkammer decision).* 
 Confirm the loan bond, then issue a payment order to Councillor
