--- a/modules/689/pages/doc-08.adoc
+++ b/modules/689/pages/doc-08.adoc
@@ -9,6 +9,9 @@
 
 == Transliteration and Translation
 
+[cols="1a,1a",options="noheader",frame=none,grid=none]
+|===
+|
 [literal,subs="verbatim,quotes"]
 ....
 NC 274                       pr. in Cam 17 Jan. 1842     
@@ -52,7 +55,7 @@ zu versehe[n]. Bbg. 20. Jan 42.
 
                       vert[retend]
 ....
-
+|
 [verse]
 ____
 *To the Princely Rent Chamber*
@@ -71,9 +74,10 @@ Confirm the loan bond, then issue a payment order to Councillor
 K. R. Berger—-not to Krückeberg, to the Amt.
 Bückeburg, 20 Jan. 1842.
 *Ricke, acting on behalf of the Rentkammer.*
-
 ____
+|===
 
+== Next Page
 
 [cols="1a,1a",options="noheader",frame=none,grid=none]
 |===
@@ -91,7 +95,7 @@ an das Amt Bückeburg
 R.        
 Wh.       
           
-Egd Strauk
+Expedirt Strauk
  22-1     
 
 Darlehn für Colon
@@ -111,14 +115,14 @@ Bburg 20 Jan 1842
 F. p.
 Lm                  L
 
-†Die übersandte Schuldverschreiben
-erfolgt hiebey zurück um nach geschehen
-Beizahlung d. 200 D. darunter das
-Erforderliche zu bemerken, die [struck-through: Stelle] Einamz
+†Die übersandte Schuldverschreibung
+erfolgt hiebeÿ zurück, um nach geschehener
+Bezahlung d. 200 D. darunter das
+Erforderliche zu bemerken, die Eintragung
 in das Hypothekenbuch zu beschaffen, und in
-d. Obligativ d. Nothig zu der je ergangen
-u solche demnächst an der Kamme-
-zu fanden.
+der Obligation das Nothig zu Verfügung
+und solche demnächst an der Kammer
+zu senden.
 
 Concept                        
 an den Kammerrentmeister      
@@ -137,6 +141,32 @@ wiesen, obige 200 Rth Cour-
 ant das Amt Bückeberg gegen
 Quit
 ....
+
+[verse]
+____
+
+
+
+
+
+†The enclosed bond is returned herewith, so that, after payment
+of the 200 thalers has been made, the requisite particulars may
+be noted beneath it, the entry in the mortgage register arranged,
+and in the bond the necessary note with reference to the order
+added; then send the same to the chamber.
+
+
+*Office Draft to the Amt Bückeburg*
+
+*Re: Loan for Colon Krückeberg, No. 10 in Berenbusch*
+
+With reference to the rescript of *24 December of last year*,
+the office is *instructed* to *draw* the *200 Reichstaler
+(courant)* loaned to *Mr. Krückeberg* from the chamber
+treasury *against receipt* and to *apply* them to the
+*purpose specified in the above rescript*.  *Bückeburg, 20
+January 1842* — *By order of the Prince.*
+____
 
 
 [literal,subs="verbatim,quotes"]
