--- a/modules/689/pages/doc-08.adoc
+++ b/modules/689/pages/doc-08.adoc
@@ -58,6 +58,14 @@ zu versehe[n]. Bbg. 20. Jan 42.
 |
 [verse]
 ____
+N. C. 274 — presented in the chamber on 17 Jan. 1842.
+
+[Fiscal oval hand-stamp]
+FÜRSTL: SCHAUMBG: LIPPE: STEMPEL-TAXE
+3 Gr.
+
+[awk]
+
 *To the Princely Rent Chamber*
 Report from the Office of Bückeburg
 
