--- a/modules/689/pages/doc-08.adoc
+++ b/modules/689/pages/doc-08.adoc
@@ -93,6 +93,9 @@ ____
 |image::19-r.png[link=self]
 |===
 
+[cols="1a,1a".options="noheader",frame=none,grid=none]
+|===
+|
 [literal,subs="verbatim,quotes"]
 ....
 Stpl. 3g               ad N. C. 274.
@@ -149,33 +152,38 @@ wiesen, obige 200 Rth Cour-
 ant das Amt Bückeberg gegen
 Quit
 ....
-
+|
 [verse]
 ____
-
-
-
-
-
-†The enclosed bond is returned herewith, so that, after payment
-of the 200 thalers has been made, the requisite particulars may
-be noted beneath it, the entry in the mortgage register arranged,
-and in the bond the necessary note with reference to the order
-added; then send the same to the chamber.
-
+*Stamp:* 3 groschen — *re:* Chamber file no. 274.
 
 *Office Draft to the Amt Bückeburg*
 
-*Re: Loan for Colon Krückeberg, No. 10 in Berenbusch*
+*Re:* Loan for Colon Krückeberg, No. 10 in Berenbusch
 
-With reference to the rescript of *24 December of last year*,
-the office is *instructed* to *draw* the *200 Reichstaler
-(courant)* loaned to *Mr. Krückeberg* from the chamber
-treasury *against receipt* and to *apply* them to the
-*purpose specified in the above rescript*.  *Bückeburg, 20
-January 1842* — *By order of the Prince.*
+With reference to the rescript of *24 December of last year*, the
+*office is instructed* to *collect*, against receipt, the *200
+Reichstaler (courant)* loaned to the said *Krückeberg* from the
+chamber treasury and to *apply* them to the *purpose specified in
+the above rescript*†.  *Bückeburg, 20 January 1842* *By order of
+the Prince.* *(initials: Lm, L)*
+
+*[margin: R.; Wh.; Dispatched: Strauk, 22 Jan.]*
+
+† *The enclosed bond is returned herewith*, so that, *after
+payment of the 200 thalers has been made*, the requisite
+particulars may be *noted beneath it*, the *entry in the mortgage
+register* arranged, and *in the bond* the *necessary note with
+reference to the order* added; *then send the same to the
+chamber*.
+
+*TODO:* I have omitted the second block on text on the page, the
+2nd Concept...
 ____
+|===
 
+
+== Next Page
 
 [literal,subs="verbatim,quotes"]
 ....
