--- a/x.adoc
+++ b/x.adoc
@@ -1,16 +1,20 @@
-weitere Entscheidung unter-
-thänigste zu Höchsten Ermessen
-seÿ indeß der Meinung, daß
-es rathsamer seÿn dürfte, lie-
-ber das Darlehn von 200 rp
-zu bewilligen, indem dabei
-selbst wenn es unsicher steht
-der Schaden für die Kammer-
-Kasse doch immer geringer
-seÿn werde, als wenn das
-fragliche wenig nutzbares
-Land, das Kreuzinger zu 400 rt
-taxirt, für mehr als 800 rt
-wiederangekauft würde.
-Bbg. 23. Decbr. 41.
-Ricke
+.Translation
+____
+*Stamp:* 3 groschen — *re:* Chamber file no. 274.
+
+*Office Draft to the Amt Bückeburg*
+
+*Re:* Loan for Colon Krückeberg, No. 10 in Berenbusch
+
+With reference to the rescript of *24 December of last year*, the *office is instructed* to *collect*,
+against receipt, the *200 Reichstaler (courant)* loaned to the said *Krückeberg* from the chamber treasury and
+to *apply* them to the *purpose specified in the above rescript*†.
+*Bückeburg, 20 January 1842*
+*By order of the Prince.* *(initials: Lm, L)*
+
+*[margin: R.; Wh.; Dispatched: Strauk, 22 Jan.]*
+
+† *The enclosed bond is returned herewith*, so that, *after payment of the 200 thalers has been made*, the
+requisite particulars may be *noted beneath it*, the *entry in the mortgage register* arranged, and *in the
+bond* the *necessary note with reference to the order* added; *then send the same to the chamber*.
+____
